<resources>
    <string name="app_name">Javv</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in">Sign In</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="sign_in_failed">"Sign in failed"</string>>
    <string name="sign_up_failed">"Sign up failed"</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Javv</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Get the latest info about your favourite matatus and routes</string>
    <string-array name="home_menu">
        <item>Show Matatus</item>
        <item>Show Passengers</item>
        <item>Save Route</item>
        <item>Saved Routes</item>
    </string-array>
</resources>
