<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignInActivity">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryPurpleLight"
        android:gravity="center"
        android:layout_margin="10dp"
        android:hint="@string/prompt_email"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryPurpleLight"
        android:gravity="center"
        android:layout_margin="10dp"
        android:hint="@string/prompt_password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryPurpleDark"
        android:textAllCaps="true"
        android:text="@string/action_sign_in" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:text="Forgot your password?"
            />

        <TextView
            android:id="@+id/textViewReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparentWhite"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryPurpleLight"
            android:text="RESET" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="15dp"
        android:text="Don't have an account?"
        />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparentWhite"
        android:padding="4dp"
        android:layout_margin="4dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryPurpleLight"
        android:text="SIGN UP" />
</LinearLayout>