<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LandingActivity"
    android:background="@drawable/background"
    android:layout_gravity="center"
    android:gravity="center">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:background="@color/colorPrimaryPurpleLight">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="MATATU" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            android:text="PUBLIC" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryPurpleLight"
        android:padding="4dp"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="40dp"
            android:text="TRANSPORT" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/intro_text"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryPurpleDark"
        android:textColor="@color/colorWhite"
        android:layout_margin="20dp"
        android:textAllCaps="true"
        android:text="@string/action_sign_up" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="15dp"
            android:text="Already have an account?"
            />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparentWhite"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryPurpleLight"
            android:textAllCaps="true"
            android:text="@string/action_sign_in" />
    </LinearLayout>
</LinearLayout>